dinner break push

--- a/mapping.tex
+++ b/mapping.tex
@@ -231,7 +231,7 @@ A network with Libmapper-enabled devices and monitors is a \emph{Mapper network}
 
 Seen from a bird's eye conceptual level, Libmapper is an implementation of a communication protocol that was created for specifying mappings over a distributed network \cite{Malloch2009}. 
 
-A communications protocol is a rigorous and formal description of a message format and rules for exchanging messages adhering to the protocol. The term protocol usually refers to the formal description of the protocol and is distinct from the implementation of the protocol. A protocol without an implementation is metaphorically like a constitution without a government. If two devices adhere to the same protocol then they are able to reliably communicate with each other because they can, in a sense, speak the same language. The mapping protocol is itself defined in terms of the Open Sound Control (OSC) protocol. This is a common practice for constructing increasingly specific protocols. The Internet is essentially a particular stack of protocols that are layered on top of each other and specify how devices and routers are to be addressed, open connections with each other, and interpret messages.
+A communications protocol is a rigorous and formal description of a message format and rules for exchanging messages adhering to the protocol. The term protocol usually refers to the formal description of the protocol and is distinct from the implementation of the protocol. A protocol without an implementation is metaphorically like a constitution without a government. If two devices adhere to the same protocol then they are able to reliably communicate with each other because they can, in a sense, speak the same language. The Mapper protocol is itself defined in terms of the Open Sound Control (OSC) protocol. This is a common practice for constructing increasingly specific protocols. The Internet is essentially a particular stack of protocols that are layered on top of each other and specify how devices and routers are to be addressed, open connections with each other, and interpret messages.
 
 To say that one protocol is layered on top of another is to say that the higher level protocol is defined in terms of the structure and conventions of the lower level protocol. In the case of Libmapper, the protocol layer that the OSC protocol is implemented on top of is called the User Datagram Protocol (UDP). The other common protocol that can be used at this conceptual layer of the Internet protocol stack is the Transmission Control Protocol (TCP). The well-known Hypertext Transfer Protocol (HTTP) is layered on top of TCP. A web browser implements HTTP so that it can fetch and display web pages from remote systems that speak the same protocol. As a protocol, OSC in not defined in terms of a particular Transport protocol (the name given to the layer in the protocol that UDP and TCP occupy - HTTP occupies the layer on top of the Transport layer, known as the Application layer). This is different from HTTP, which is specifically a TCP-based protocol.
 
@@ -252,11 +252,17 @@ The complete definition of the OSC protocol is not important for the scope of th
 
 \subsection{Mapper Protocol}
 
-The semantics for the common set of OSC messages that the \emph{Mapper Protocol} (the name that will be used to describe the specification implemented by Libmapper in this paper) is intended to be as useful as possible for configuring mappings between output and input signals without assuming too much about what form the control or sound generation will take. In the Mapper Protocol, there is a concept of \emph{source device} and \emph{destination device}. In a DMI, the control mechanism will often be announced as a source device and the sound generation mechanism will be announced as a destination device. The set of messages proposed by the Mapper Protocol allows each device participating in the composite distributed system to \emph{announce} its presence, \emph{discover}, \emph{describe} itself, \emph{link} to another device, \emph{connect} one of its datastreams (also referred to as signals) to a datastream on a device it is linked to, and \emph{condition or transform} a signal with a basic mathematical function \cite{Malloch2009}. These last two pieces of functionality are the two possible levels of mapping that can be present in the prototypical mapping system referenced in section \ref{sec:Importance of Mapping}.
+The semantics for the common set of OSC messages that the \emph{Mapper Protocol} (the name that will be used to describe the specification implemented by Libmapper in this paper) is intended to be as useful as possible for configuring mappings between output and input signals without assuming too much about what form the control or sound generation will take. In the Mapper Protocol, there is a concept of \emph{source device} and \emph{destination device}. In a DMI, the control mechanism will often be announced as a source device and the sound generation mechanism will be announced as a destination device. 
+
+The set of messages proposed by the Mapper protocol allows each device participating in the composite distributed system to \emph{announce} its presence, \emph{discover}, \emph{describe} itself, \emph{link} to another device, \emph{connect} one of its signals (also referred to as datastreams) to a signal on a device it is linked to, and \emph{condition or transform} a signal with a basic mathematical function \cite{Malloch2009}. These last two pieces of functionality are the two possible levels of mapping that can be present in the prototypical mapping system referenced in section \ref{sec:Importance of Mapping}.
+
+The messages that are used to perform specific operations on the network have their own Mapper syntax distinct from OSC syntax. This syntax is used to improve readability and is transparently translated into OSC syntax by individual Libmapper instances before transmission over the network.
 
 \subsubsection{Announcement}
 
 Each device in the distributed system announces itself with a port and unique name that it can be addressed with that it would like to use. In the case that other devices in the local network have already reserved a particular port or unique name, Libmapper uses a collision detection algorithm to systematically try other ports and/or modify the requested name with an appended unique ordinal number. This allows a set of identical control or sound generation devices to each be programmed to request the same collection of OSC names for their signals without worrying about the identical devices being addressed by the same names.
+
+The device is also responsible for declaring the signals that can send as output or receive as input. These signals are addressed by hierarchical OSC Address Patterns with the device name that the signal is associated with as the root of the address pattern. Therefore a device named \verb#tstick# with an assigned ordinal of \verb#2# would be addressed as \verb#/tstick.2# and an accelerometer signal on the device could be addressed as \verb#/tstick.2/accel/1/x#. A second signal might be addressed as \verb#/tstick.2/accel/1/y# and a third signal, \verb#/tstick.2/accel/2/x#. The fact that the name of every signal is formatted as a hierarchical namespace will be useful when deciding on the best visualization for this data.
 
 \subsubsection{Discovery}
 
@@ -308,7 +314,7 @@ The source device then destroys the router handling this link after receiving a 
 \verb#/unlinked /tstick.1 /granul8.1#
 \end{quote}
 
-\subsubsection{Datastream Connection}
+\subsubsection{Signal Connection}
 
 Once a router has been created between a source and destination by requesting a link, specific output signals on the source device can be connected to specific input signals on the destination device. For example, once a T-Stick (\verb#/tstick.1#) has been linked to the Granul8 granular synthesizer (\verb#/granul8.1#), the individual signals output by the touch sensors, accelerometers, etc. in the T-Stick can be routed to specific inputs in the granular synthesizer. Without specifying connections between output signals and input signals then gestures performed with the control source device will have no affect on the audio samples produced by the sound generation destination device. 
 
@@ -359,6 +365,8 @@ The properties of a connection can be queried with:
 \end{quote}
 
 The syntax of the message for modifying properties of a connection is similar to creating a connection with \verb#/connect# replaced by \verb#/connection/modify#.
+
+It may be noticed from this syntax that the Mapper protocol supports only \emph{one-to-one} and \emph{one-to-many} mappings between sets of signals. An output signal can be connected to one or many different input signals. However, the syntax does not provide a mechanism for specifying how to handle one input signal receiving a signal from multiple output signals. The added complexity of handling a \emph{many-to-one} or \emph{many-to-many} mapping maybe introduced into the Mapper protocol at a future time.
 
 These special OSC messages as defined by their message headers and syntax comprise what is referred to in this paper as the \emph{Mapper Protocol}. By sending messages from this set of messages recognized by Libmapper it is possible to configure mappings between an arbritrarily large collection of devices on a local network with relatively little work.
 
