--- a/vijay_thesis.bib
+++ b/vijay_thesis.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Vijay at 2011-08-02 18:19:26 -0400 
+%% Created for Vijay at 2011-08-03 16:57:43 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -12,6 +12,18 @@
 
 @string{icmc2010 = {Proc. of the 2010 International Computer Music Conference. San Francisco, Calif.: International Computer Music Association.}}
 
+
+@article{edgebundles2006,
+	Author = {Danny Holten},
+	Date-Added = {2011-08-03 16:52:01 -0400},
+	Date-Modified = {2011-08-03 16:53:24 -0400},
+	Journal = {IEEE Transactions on Visualization and Computer Graphics},
+	Month = {September},
+	Number = {5},
+	Pages = {741-748},
+	Title = {Hierarchical Edge Bundles: Visualization of Adjacency Relations in Hierarchical Data},
+	Volume = {12},
+	Year = {2006}}
 
 @article{orio2002,
 	Author = {Marcelo Mortensen Wanderley and Nicola Orio},
